- Fixed CI/CD issues. - Fixed isOpen, createdAt, updatedAt fields in Event.